# pitch-deck-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py
src/pitch_deck_analyzer/: __init__.py  api.py  app.py  crew.py  run.py
src/pitch_deck_analyzer/config/: agents.yaml  tasks.yaml
src/pitch_deck_analyzer/tools/: __init__.py  file_processor.py  website_audit.py
utils/: __init__.py  file_processor.py
